[package]
name = "format_convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
image = { version = "0.25.1", default-features = true, features = ["rayon","png", "jpeg", "tga"] }
imagefmt = "4.0.0"
